[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11,<1"]

[project]
name = "pipette"
version = "0.1.0"
description = "Unified import and export of data in Python."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
authors = [{ name = "Michael Steinbaugh", email = "mike@steinbaugh.com" }]
keywords = ["bioinformatics", "data-import", "data-export", "genomics", "io"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = ["numpy", "pandas"]

[project.optional-dependencies]
docs = ["myst-parser", "numpydoc", "pydata-sphinx-theme", "sphinx"]
develop = [
    "bumpver",
    "coverage",
    "interrogate",
    "pyright[nodejs]",
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
    "uv",
]
extra = ["boto3", "openpyxl", "pyarrow", "pyyaml", "scipy", "tables"]

[project.urls]
Homepage = "https://pipette.acidgenomics.com/"
Documentation = "https://pipette.acidgenomics.com/"
Repository = "https://github.com/acidgenomics/pipette"
Issues = "https://github.com/acidgenomics/pipette/issues"

[tool.bumpver]
commit = true
commit_message = "Bump to {new_version}."
current_version = "v0.1.0"
push = false
tag = false
tag_message = "{new_version}"
tag_scope = "default"
version_pattern = "vMAJOR.MINOR.PATCH"

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{pep440_version}"']

[tool.coverage.run]
relative_files = true
source = ["src/pipette"]

[tool.interrogate]
fail-under = 80
ignore-init-method = true
ignore-init-module = true
ignore-property-decorators = false
ignore-setters = false
verbose = 2

[tool.numpydoc_validation]
checks = [
    "all",
    "GL01",
    "GL02",
    "GL03",
    "GL08",
    "ES01",
    "EX01",
    "PR02",
    "SA01",
    "SS06",
]
override_SS05 = ['^Access ', '^Assess ', '^Process ']

[tool.pyright]
pythonVersion = "3.12"
verboseOutput = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = ["network: marks tests that require network access"]

[tool.ruff]
indent-width = 4
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
quote-style = "double"

[tool.ruff.lint]
# List of rules: https://docs.astral.sh/ruff/rules/
select = [
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C90",  # mccabe
    "D",    # pydocstyle
    "E",    # pycodestyle
    "F",    # PyFlakes
    "FIX",  # flake8-fixme
    "I",    # isort
    "N",    # pep8-naming
    "NPY",  # NumPy-specific rules
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "SLOT", # flake8-slots
    "UP",   # pyupgrade
    "W",    # pycodestyle
]
ignore = [
    "ANN401", # dynamically-typed-expressions
    "D203",   # one-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "D401",   # non-imperative-mood
]

[tool.ruff.lint.isort]
extra-standard-library = ["typing"]
known-first-party = []
order-by-type = true
relative-imports-order = "closest-to-furthest"
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN204",
    "D101",
    "D102",
    "D103",
    "D104",
    "F841",
    "N801",
    "N803",
    "PLC0415",
    "PLR2004",
    "RUF012",
    "RUF043",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
allow-magic-value-types = ["bytes", "int", "str"]
max-args = 30
max-branches = 30
max-positional-args = 2
max-statements = 100

[tool.ty]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [".venv", "**/__pycache__", "**/.*"]

[tool.ty.terminal]
error-on-warning = true

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "pipette"
module-root = "src"
